syntax = "proto3";

option csharp_namespace = "JobsWorker.Shared";

import "google/protobuf/timestamp.proto";

package JobsWorker.Shared;

message QueryConfigurationReq {
	string NodeName = 1;
	string RequestId = 2;
	map<string,string> Parameters = 3;
}

message QueryConfigurationRsp{
	string NodeName = 1;
	string RequestId = 2;
	int32 ErrorCode = 3;
	string Message = 4;
	map<string,string> Configurations = 5;
}

message ConfigurationChangedReport{
	string NodeName = 1;
	string RequestId = 2;
	map<string,string> Configurations = 3;
}